--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,15 @@ services:
   watchtower:
     container_name: watchtower
     image: containrrr/watchtower
+    environment: 
+      - WATCHTOWER_NOTIFICATIONS = slack
+      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL = "https://hooks.slack.com/services/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"
+      - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER = watchtower-server-1
     labels:
       com.centurylinklabs.watchtower.enable: "true"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: --interval 10 --no-pull --monitor-only --label-enable
+    command: --interval 10 --label-enable
     networks:
       - test-env
 
